# inkmove

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: configure.cmake  sources.cmake
design/: shapes.pu
docs/doxygen/: Doxyfile
src/: main.cpp
src/editor/: main.cpp
src/include/: build_info.h.in  common.h  rectangle.h  transform.h  visual.h
